--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 </div>
 
 <!--SORT INPUT-->
-<input type="text" id="studentInput" placeholder="Enter Students Name...">
+<input type="text" id="studentInput" placeholder="Enter Students Name..." required>
+<button onclick="addStudent()">Sort</button>
+
+
 
 
 <!--BUTTON ROW-->
@@ -49,6 +52,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!--PROJECT SCRIPTS-->
-  <script src="main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
