fixed expel button and added house crests

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </div>
 
 <!--SORT INPUT-->
-<input type="text" id="studentInput" placeholder="Enter Students Name..." required>
-<button onclick="addStudent()">Sort</button>
+<input type="text" id="studentInput" placeholder="Enter Students Name..." class="input">
+<button onclick="addStudent()" class="button">Sort</button>
 
 
 
