--- a/index.html
+++ b/index.html
@@ -18,26 +18,28 @@
   <p>
     blah blah blah blah blah blah blah blah blah blah  blah blah blah blah blah 
   </p>
+  <div class="welcome-sort" id="enterPage">
+    <button  class="stButton" id="welcomeBtn">Your future awaits! Press Me!</button>
+  </div>
 </div>
 
-<!--SORT INPUT-->
+<div id="startSort" class="startStyle">
+  <!--SORT INPUT-->
 <div>
-<input type="text" name="name" id="studentInput" class="input" placeholder="Enter Students Name..." required>
-<button type="submit"  onclick="addStudent()" class="button">Sort</button>
+  <input type="text" name="name" id="studentInput" class="input" placeholder="Enter Students Name..." required>
+  <button type="submit"  onclick="addStudent()" class="button">Sort</button>
+  </div>
+  
+  <!--BUTTON ROW-->
+  <div class="student-input" id="filterStudents"></div>
+  
+  <!--CARDS DIV-->
+  <div class="school-container">
+  <div class="schools" id="studentContainer"></div>
+  <div class="dark-side" id="voldContainer"></div>
+  </div>
+  
 </div>
-<div class="error" id="errorMessage">
-
-</div>
-
-<!--BUTTON ROW-->
-<div class="student-input" id="filterStudents"></div>
-
-<!--CARDS DIV-->
-<div class="school-container">
-<div class="schools" id="studentContainer"></div>
-<div class="dark-side" id="voldContainer"></div>
-</div>
-
 <!--BOOTSTRAP SCRIPTS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
