--- a/index.html
+++ b/index.html
@@ -1,49 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sorting Hat</title>
-  <!--BOOTSTRAP CSS-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!--PROJECT CSS-->
-  <link rel="stylesheet" href="main.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sorting Hat</title>
+    <!--BOOTSTRAP CSS-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!--PROJECT CSS-->
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <!--WELCOME-->
+    <div class="welcome">
+      <h1>Welcome to Hogwarts!</h1>
+      <p>
+        blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+        blah
+      </p>
+      <div class="welcome-sort" id="enterPage">
+        <button class="stButton" id="welcomeBtn">
+          Your future awaits! Press Me!
+        </button>
+      </div>
+    </div>
 
-<!--WELCOME-->
-<div class="welcome">
-  <h1>Welcome to Hogwarts!</h1>
-  <p>
-    blah blah blah blah blah blah blah blah blah blah  blah blah blah blah blah 
-  </p>
-  <div class="welcome-sort" id="enterPage">
-    <button  class="stButton" id="welcomeBtn">Your future awaits! Press Me!</button>
-  </div>
-</div>
+    <div id="startSort" class="startStyle">
+      <!--SORT INPUT-->
+      <div>
+        <input
+          type="text"
+          name="name"
+          id="studentInput"
+          class="input"
+          placeholder="Enter Students Name..."
+          required
+        />
+        <button type="submit" onclick="addStudent()" class="button">
+          Sort
+        </button>
+      </div>
 
-<div id="startSort" class="startStyle">
-  <!--SORT INPUT-->
-<div>
-  <input type="text" name="name" id="studentInput" class="input" placeholder="Enter Students Name..." required>
-  <button type="submit"  onclick="addStudent()" class="button">Sort</button>
-  </div>
-  
-  <!--BUTTON ROW-->
-  <div class="student-input" id="filterStudents"></div>
-  
-  <!--CARDS DIV-->
-  <div class="school-container">
-  <div class="schools" id="studentContainer"></div>
-  <div class="dark-side" id="voldContainer"></div>
-  </div>
-  
-</div>
-<!--BOOTSTRAP SCRIPTS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      <!--BUTTON ROW-->
+      <div class="student-input" id="filterStudents"></div>
 
-<!--PROJECT SCRIPTS-->
-  <script src="scripts/main.js"></script>
-</body>
+      <!--CARDS DIV-->
+      <div class="school-container">
+        <div class="schools" id="studentContainer"></div>
+        <div class="dark-side" id="voldContainer"></div>
+      </div>
+    </div>
+    <!--BOOTSTRAP SCRIPTS-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+
+    <!--PROJECT SCRIPTS-->
+    <script src="scripts/main.js"></script>
+  </body>
 </html>
