--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <div class="welcome">
       <h1>Welcome to Hogwarts!</h1>
       <p>
-        blah blah blah blah blah blah blah blah blah blah blah blah blah blah
-        blah
+        Welcome, welcome, one and allThe show's about to startI'm the Hogwarts Sorting HatAnd it's time to play my partYou may call me worn and raggedIf that's all you truly seeBut listen close and I will tell where you're supposed to beGo ahead and try me onThere's nothing left to fearI'll find right where you belong by looking between your ears!
       </p>
       <div class="welcome-sort" id="enterPage">
         <button class="stButton" id="welcomeBtn">
